--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,20 @@
 * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 body {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: auto auto 1fr auto;
+    grid-template-rows: auto auto minmax(0, 1fr) auto;
     grid-template-areas:
     "header     header"
     "toolbar    toolbar"
     "disasm     sidebar"
     "footer     footer"
     ;
+    height: 100vh;
 }
 
 header {
@@ -26,7 +30,18 @@ table {
 }
 
 .disasm {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr;
     grid-area: disasm;
+}
+
+.disasm-container {
+    overflow-y: scroll;
+}
+
+.disasm-output {
+    font-family: 'Courier New', Courier, monospace;
 }
 
 .sidebar {
