--- a/css/styles.css
+++ b/css/styles.css
@@ -47,10 +47,13 @@ html {
 }
 
 .icon-btn {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     border: none;
     border-radius: 5px;
     background-color: var(--grey);
-    padding: 3px 5px 3px 5px;
+    padding: 10px;
     margin: 0 5px 0 0;
 }
 .icon-btn:disabled {
@@ -58,8 +61,8 @@ html {
 }
 
 .icon-btn__img {
-    height: 25px;
-    width: 25px;
+    height: 16px;
+    width: 16px;
 }
 
 table {
